tests/errmsgs/terror_in_raise.nim
discard """
  errormsg: "undeclared identifier: 'doesntExist'"
  line: 6
"""

raise doesntExist
